# predictive-test-selection

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mise.toml  pyproject.toml
tests/: test.py
